--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -61,5 +61,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://127.0.0.1:7860"
+    "proxy": "https://api.hatcher.network/builder/"
 }
